# FastAPI-ML-Template

./: Dockerfile  README.md  build-push.sh  predict.py  pyproject.toml
infra/: deployment-pythonapi.yaml  deployment-redis.yaml  service-prediction.yaml
src/: main.py
tests/: test_lab3.py
trainer/: model_pipeline.pkl
